<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/footerRoot"
    android:background="#01DDD5"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="12dp"
    android:paddingEnd="12dp"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    tools:context=".FooterFragment" >

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnOne"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:text="@string/nav_one"
        app:cornerRadius="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnTwo"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@android:color/white"
        app:strokeWidth="2dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnTwo"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/nav_two"
        app:cornerRadius="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnThree"
        app:layout_constraintStart_toEndOf="@id/btnOne"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@android:color/white"
        app:strokeWidth="2dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnThree"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:text="@string/nav_three"
        app:cornerRadius="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnTwo"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@android:color/white"
        app:strokeWidth="2dp" />
</androidx.constraintlayout.widget.ConstraintLayout>
